test/fixtures/warnings/protocols.txt
protocols.j:9:1: warning: multiple declarations of method 'firstName' found and ignored
- (CPString)firstName;
^
protocols.j:5:1: note: first declaration is here:
- (CPString)firstName;
^
protocols.j:13:1: error: duplicate definiton of protocol 'Person'
@protocol Person
^
protocols.j:3:1: note: previous definition is here
@protocol Person
^
protocols.j:18:4: warning: unknown type 'CPArray'
- (CPArray)children;
   ^
protocols.j:25:27: warning: method 'fullName' in protocol 'Person' not implemented
@implementation Somebody <Person>
                          ^
protocols.j:7:1: note: method 'fullName' declared here
- (CPString)fullName;
^
protocols.j:34:45: error: cannot find protocol declaration for 'Unknown'
@implementation SomeParent <Person, Parent, Unknown>
                                            ^
protocols.j:34:37: warning: method 'adopt:' in protocol 'Parent' not implemented
@implementation SomeParent <Person, Parent, Unknown>
                                    ^
protocols.j:17:1: note: method 'adopt:' declared here
- (void)adopt:(Person)child;
^
protocols.j:34:37: warning: method 'children' in protocol 'Parent' not implemented
@implementation SomeParent <Person, Parent, Unknown>
                                    ^
protocols.j:18:1: note: method 'children' declared here
- (CPArray)children;
^
protocols.j:66:13: warning: unknown type 'CPArray'
    CPArray children;
            ^
protocols.j:84:4: warning: unknown type 'CPArray'
- (CPArray)children
   ^
protocols.j:90:26: warning: cannot find protocol declaration for 'Unknown'
- (void)setSomething:(id<Unknown>)something
                         ^

8 warnings and 2 errors generated.
